--- a/style2.css
+++ b/style2.css
@@ -3,7 +3,7 @@
     --light-grey:#F5F5F5;
     --grey:#E0E0E0;
     --medium-grey:#9e9e9e;
-    --dark-grey:#757575
+    --dark-grey:#616161;
     --black:#212121;
     --cyan:#18ffff;
 
